# openai_support_analysis

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  SKILLS.md
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/adapters/: base.py  community.py  github.py  registry.py
backend/app/api/: __init__.py  analytics.py  deps.py  ingestion.py  issues.py  pipeline.py  search.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  domain.py
backend/app/schemas/: extraction.py  issues.py  pipeline.py
backend/app/services/: analytics.py  embeddings.py  extraction.py  hashing.py  ingestion.py  normalization.py
backend/tests/: test_extraction.py
docker/: docker-compose.yml
docker/secrets/: .gitignore  postgres_password.example
docs/: ARCHITECTURE.md
frontend/: package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: data-table.tsx  fetch-latest-button.tsx  issue-dashboard.tsx  metric-card.tsx
