[project]
name = "openai-support-intelligence-backend"
version = "0.1.0"
description = "FastAPI backend for OpenAI ecosystem support intelligence."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "pgvector>=0.3.0",
  "psycopg[binary]>=3.2.0",
  "python-dotenv>=1.0.1",
  "pydantic-settings>=2.3.0",
  "sqlalchemy>=2.0.30",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
